# StudyHub

./: .env.example  .gitignore  CLAUDE.md  Complete_Development_Plan.md  PROGRESS.md  README.md  TASKLIST.md  docker-compose.dev.yml  docker-compose.yml  studyhub_overview.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_extensions.py  002_curriculum_frameworks.py  003_users.py  004_students.py  005_subjects.py  006_curriculum_outcomes.py  007_senior_courses.py  008_student_subjects.py  009_notes.py  010_sessions.py  011_ai_interactions.py  012_user_privacy_fields.py  013_flashcards.py  014_revision_history.py  015_goals.py  016_notifications.py  017_notification_preferences.py  018_weekly_insights.py  019_add_student_subject_columns.py  020_achievement_definitions.py  021_push_subscriptions.py  022_deletion_requests.py  023_ai_usage.py  024_deletion_token_expiry.py  025_deletion_request_user_set_null.py
backend/app/: __init__.py  main.py
backend/app/config/: gamification.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/middleware/: __init__.py  rate_limit.py  security.py
backend/app/models/: __init__.py  achievement_definition.py  ai_interaction.py  ai_usage.py  curriculum_framework.py  curriculum_outcome.py  deletion_request.py  flashcard.py  goal.py  note.py  notification.py  notification_preference.py  push_subscription.py  session.py  (+7 more)
backend/scripts/: create_db.py  create_test_db.py  seed_nsw_curriculum.py
backend/tests/: conftest.py
(+483 files in other folders)
